use s3.copyObject when source and destintation is both S3 bucket